# mprpc

./: CMakeLists.txt  autobuild.sh
example/callee/: CMakeLists.txt  friendservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logging.h  mprpcapplication.h  mprpcchannel.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
